# lighthouse

./: .dockerignore  .gitignore  .pre-commit-config.yaml  =0.21.0  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.dual-fuse  Dockerfile.pyfuse3  LEGACY_CODE_AUDIT_REPORT.md  LICENSE  MANIFEST.in  Makefile  PROJECT_STATUS.md  README.md  RELEASE_NOTES.md  SYSTEM_PROMPT.md  TESTING_REPORT.md  corrected_mcp_test.py  debug_session_auth.py  docker-compose.dual-fuse.yml  docker-compose.yml  external_security_assessment_day20_21.py  external_security_assessment_results.json  final_mcp_test.py  final_working_test.py  integration_specialist_coordination_demo.py  integration_specialist_live_demo.py  integration_specialist_mcp_demo_final.py  integration_specialist_mcp_success.py  lighthouse_mcp_interface.py  lighthouse_server_daemon.py  phase1_performance_comprehensive_report.json  phase1_performance_final.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-dual-fuse.txt  requirements-pyfuse3.txt  requirements.txt  (+27 more)
.claude/: config.json
.claude/agents/: algorithm-specialist.md  data-architect.md  devops-engineer.md  infrastructure-architect.md  integration-specialist.md  performance-engineer.md  security-architect.md  system-architect.md  technical-writer.md  test-engineer.md  torch-specialist.md  validation-specialist.md
.claude/hooks/: validate_command.py
.codacy/: codacy.yaml
.github/workflows/: build-and-test.yml
backups/wait_for_messages_removal/: CLAUDE.md.20250902_121353.bak  HLD.md.20250902_121353.bak  http_server.py.20250902_121353.bak
config/: feature_flags.json  grafana_alerts.json  infrastructure_capacity.yaml  monitoring.yaml  pagerduty_alerts.json  prometheus_rules.yml  slack_webhooks.json
config/docker/: bridge.yaml.template
config/grafana/dashboards/: lighthouse-bridge-overview.json
config/prometheus/: prometheus.yml
config/prometheus/rules/: lighthouse-bridge.yml
data/baselines/: baselines.json
data/deployment/: compatibility_config.json  deployment_status_100.json  deprecation_notice.json  deprecation_wrapper.py
data/real_performance/: performance_1756721891.json
data/week2_results/: chaos_config.json  friday_report.json  go_no_go_decision.json  monday_report.json  monday_security_briefing.json  monday_security_report.json  remediation_plan.json  thursday_report.json  tuesday_performance_report.json  tuesday_report.json  wednesday_report.json  wednesday_resilience_report.json  week2_final_report.json
docs/: 100_PERCENT_DEPLOYMENT_COMPLETE.md  AGENT_PROMPT.md  AGENT_QUICKSTART.md  DESIGN.md  FEATURE_PACK_0_IMPLEMENTATION.md  FEATURE_PACK_0_RUNSHEETS_SUMMARY.md  LIGHTHOUSE_MCP_USER_MANUAL.md  MIGRATION_GUIDE.md  REAL_PERFORMANCE_RESULTS.md  VIRTUAL_FILESYSTEM.md  WEEK2_EXPERT_REVIEW_SUMMARY.md  WEEK2_IMPLEMENTATION_SUMMARY.md
docs/architecture/: ADR-001-EMERGENCY_DEGRADATION_MODE.md  ADR-002-EVENT_STORE_DATA_ARCHITECTURE.md  ADR-003-EVENT_STORE_SYSTEM_DESIGN.md  ADR-004-EVENT_STORE_OPERATIONS.md  FEATURE_PACK1.md  FEATURE_PACK2.md  FEATURE_PACK3.md  FEATURE_PACK_0_ELICITATION.md  FEATURE_PACK_0_EVENT_SOURCED.md  FEATURE_PACK_0_FINAL.md  FEATURE_PACK_0_MIGRATION_STRATEGY.md  FEATURE_PACK_0_PERFORMANCE_ANALYSIS.md  FEATURE_PACK_0_RUNSHEETS.md  FEATURE_PACK_0_RUNSHEETS_ENHANCED.md  FEATURE_PACK_0_SECURITY_ENHANCED.md  HLD.md  HLD_BRIDGE_ARCHITECTURAL_REMEDIATION.md  HLD_BRIDGE_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SCHEDULE.md  PHASE_1_DETAILED_DESIGN.md  PLAN_CHARLIE_EXECUTIVE_REPORT.md  REMEDIATION_PLAN_BRAVO.md  REMEDIATION_PLAN_CHARLIE.md  REMEDIATION_PLAN_CHARLIE_FINAL_CONDITIONS.md  REMEDIATION_PLAN_CHARLIE_REVISED.md  REMEDIATION_PLAN_DELTA.md  REMEDIATION_PLAN_PHASE_1_1.md  REVISED_4_WEEK_IMPLEMENTATION_PLAN.md  VIRTUAL_SKEUMORPHISM.md
docs/architecture/reviews/: FEATURE_PACK_0_FINAL_VALIDATION.md  FEATURE_PACK_0_integration_specialist_signoff.md  FEATURE_PACK_0_system_architect_signoff.md  FEATURE_PACK_0_validation_specialist_signoff.md
docs/infrastructure/: dual-fuse-migration.md
docs/plans/: PLAN_ECHO_MCP_REMEDIATION.md
examples/: elicitation_quickstart.py  event_store_demo.py
scripts/: baseline_collection.py  canary_readiness_test.py  chaos_engineering.py  deploy_100_percent.py  deploy_elicitation.py  endurance_test.py  establish_baselines.py  load_test_elicitation.py  performance_comparison.py  performance_final_test.py  quick_performance_test.py  real_performance_test.py  remove_wait_for_messages.py  rollback_elicitation.py  run_load_tests.sh  run_scenario.sh  setup_alerts.py  setup_load_testing.py  test_elicitation_fix.py  week2_orchestrator.py
scripts/deployment/: deploy.sh
scripts/docker/: deploy-production.sh  start-bridge-dev.sh  start-bridge-dual-fuse.sh  start-bridge-pyfuse3.sh  start-bridge-simple.sh  start-bridge.sh  test-container-setup.sh  test-mcp-container.sh  validate-fuse-backend.py
scripts/operations/: OPERATIONS_RUNBOOK.md  health-check.sh
src/lighthouse/: __init__.py  bridge.py  mcp_bridge_minimal.py  mcp_expert_coordinator.py  mcp_production_monitor.py  mcp_resource_manager.py  mcp_server.bak  mcp_server.broken.backup  mcp_server.py  mcp_server_old.backup  server.py  validator.py
src/lighthouse/bridge/: __init__.py  api_server.py  http_server.py  main_bridge.py  run_bridge.py
tests/: __init__.py  conftest.py  test_bridge.py  test_hook.py  test_integration.py  test_pair_programming.py  test_server.py  test_validation_bridge.py  test_validator.py
tests/byzantine/: test_byzantine_framework.py  test_context_tampering.py  test_property_based_consensus.py
tests/integration/: test_performance_baselines.py  test_phase2_comprehensive.py  test_realistic_load_simulation.py  test_sla_enforcement.py  test_week2_integration.py
tests/load/: test_integrated_load_integrity.py  test_multi_agent_load.py
tests/security/: test_agent_impersonation_hijacking.py  test_cross_agent_information_leakage.py  test_elicitation_security.py  test_fuse_side_channel_attacks.py  test_multi_agent_privilege_escalation.py  test_phase3_day18_19_comprehensive.py  test_phase3_enhanced_security.py
(+271 files in other folders)
